--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>Nova Aba</title>
     <style>
       html {
-        background: src('./Wallpaper.png') bottom left #FFF;
+        background-image: src('./Wallpaper.png') bottom left;
       }
     </style>
   </head>
