--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
     <title>Nova Aba</title>
     <style>
       html {
-        background-image: src('./Wallpaper.png') bottom left;
+        background: url('./Wallpaper.png') no-repeat bottom left #FFF;
+        width: 100%;
+        height: 100%;
       }
     </style>
   </head>
